Closed
Bug 640226
Opened 15 years ago
Closed 15 years ago
in full screen (f11) pdf files become transparent ( Firefox 4 ) and top bars don't disappear / don't go away
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: aardmaat, Assigned: jimm)
References
(
URL
)
Details
Attachments
(1 file)
|
1022 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0) Gecko/20100101 Firefox/4.0
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0) Gecko/20100101 Firefox/4.0
on both my machines pdf files become transparent (everything is transparent except for the white parts) when I go into fullscreen mode of the browser (f11)
also the top bars don't disappear any more when looking at pdf file.
happens with all pdf files I've found so far (including pdf files from random google searches)
Reproducible: Always
Steps to Reproduce:
1.use a theme (not default theme)
2.go into fullscreen mode (f11)
3.open a pdf file
4.make top bars appear
Actual Results:
pdf file was transparrent + top bars stay though they should go out of sight
Expected Results:
firefox should display the pdf file normally and give the full screen back after using the bars at the top (url, tabs)
both machines work on windows 7
doesn't happen with default theme does with both Krivan and Yosemite
Mozilla/5.0 (Windows NT 6.1; rv:2.0b13pre) Gecko/20110309 Firefox/4.0b13pre
Able to reproduce. After installing a persona and going into full screen mode and opening a pdf file becomes opaque. Hovering the move on top of the screen, shows the navigational bar. Hovering or clicking on the window, navigational bar does not hide.
| Assignee | ||
Comment 2•15 years ago
|
||
confirmed. This should be fixed by bug 633282. But it won't get into the 4.0 final, unfortunately.
Depends on: 633282
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 3•15 years ago
|
||
For some reason glass margins all go negative in this case. I've got a bunch of patches applies at the moment so I can't debug but I'll look into this this weekend to be sure it's not a widget/glass bug that can be easily fixed.
| Assignee | ||
Comment 4•15 years ago
|
||
Not sure why we ever had this exclusion in there.
Assignee: nobody → jmathies
Attachment #518958 -
Flags: review?(roc)
Attachment #518958 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 6•15 years ago
|
||
(In reply to comment #5)
> it also just happened with flash video
yes it'll happen for all plugins. We'll try to get this into 2.0.1 which should be out pretty quick after the initial release.
| Assignee | ||
Comment 7•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 8•15 years ago
|
||
I can still reproduce this on:
Build identifier: Mozilla/5.0 (Windows NT 6.1; rv:2.2a1pre) Gecko/20110404 Firefox/4.2a1pre
The navigational bar does not hide after hovering the mouse on the top of the screen.
| Assignee | ||
Comment 9•15 years ago
|
||
(In reply to comment #8)
> I can still reproduce this on:
> Build identifier: Mozilla/5.0 (Windows NT 6.1; rv:2.2a1pre) Gecko/20110404
> Firefox/4.2a1pre
>
> The navigational bar does not hide after hovering the mouse on the top of the
> screen.
The transparency issue was the only part fixed here. Auto hide issues with pdfs displayed in tabs is covered by bug 437929.
You need to log in
before you can comment on or make changes to this bug.
Description
•