Bug 640226 - Don't exclude full screen from plugin glass calculations. Fixes full screen pdf transparency bug. r=roc